RESOLVED FIXED272410
REGRESSION (276433@main): snapshots are partially dark-shaded
https://bugs.webkit.org/show_bug.cgi?id=272410
Summary REGRESSION (276433@main): snapshots are partially dark-shaded
Sammy Gill
Reported 2024-04-09 11:44:18 PDT
Snapshots appear to have very dark regions that make the content hard to see
Attachments
Sammy Gill
Comment 1 2024-04-09 11:44:48 PDT
Sammy Gill
Comment 2 2024-04-09 11:54:59 PDT
EWS
Comment 3 2024-04-09 15:47:05 PDT
Committed 277273@main (67629e39b0e9): <https://commits.webkit.org/277273@main> Reviewed commits have been landed. Closing PR #27041 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.