REGRESSION (276433@main): Snapshots are partially dark-shaded. https://bugs.webkit.org/show_bug.cgi?id=272410 rdar://125791769

Reviewed by Simon Fraser and Abrar Rahman Protyasha.

These dark regions are due to the fact that we are missing the white
background when painting the previews. This patch adds them back in the
async case since the preview is painted without the async renderer.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintPDFContent):

Canonical link: https://commits.webkit.org/277273@main